--- a/learn_bibliometrix.Rmd
+++ b/learn_bibliometrix.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Learning bibliometrix"
 author: "M.Lagisz"
-date: "01/06/2020"
+date: "03/06/2022"
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r mysetup, include=FALSE}
@@ -29,7 +31,7 @@ Please make sure you got the latest RStudio and latest R version installed.
  * Getting bibliometric data   
  * Summarising bibliometric data   
  * Creating bibliometric networks   
- * More resouces     
+ * More resources     
  
  
 **** 
@@ -37,42 +39,44 @@ Please make sure you got the latest RStudio and latest R version installed.
 ## About this lesson   
 
 This lesson is prepared for these who are already familiar with R coding language, R markdown and RStudio.
-By the end of this tutorial you should be able to create a simple html document containing  markdown-formatted text, images and R code, all in RStudio.   
+By the end of this tutorial you should be able to create a simple html document containing  markdown-formatted text, images and R code - all in RStudio.   
 
 
 ****
 
 ## Getting bibliometric data
 
-You can do analyses of literature on any topic. 
-In this lesson we will have a look at the academic literature related to the concept of Terminal Investment.
+You can do analyses of literature on any topic.   
+
+In this lesson we will have a look at the academic literature related to the concept of Terminal Investment.  
+
 Terminal Investment hypothesis predicts increased investment of resources into reproduction as the chances of survival decrease. This can be observed as increased reproductive effort in older animals or in animals challenged with factors signalling threat to their survival (e.g., predation, pathogenes, parasites).    
 
 Terminal investment in animals is usually studied in three main ways:     
  1. via observational studies of correlations of age and reproductive effort,      
- 2. in experimantal studies where animals are subject to immune challenges and their subsequent reprodactive effort is compared to unchallenged aninmals of the same age,    
- 3. in experimantal studies where reproductive response to immune challenge is compared between animals of older ages versus younger ages.   
+ 2. in experimental studies where animals are subject to immune challenges and their subsequent reproductive effort is compared to unchallenged animals of the same age,    
+ 3. in experimental studies where reproductive response to immune challenge is compared between animals of older ages versus younger ages.   
 
 You can read more on this Wiki page: https://en.wikipedia.org/wiki/Terminal_investment_hypothesis   
 
 We hope the topic is quite appealing and quiet easy to understand.There are several published reviews on terminal investment hypothesis and we can expect many publications related to this topic, as well as many researchers working on it. Is this so?  
 
-Today, we will try to run bibliometric analyses on the relevant sample of literature. Note that ther are a few available  R packages (and many other online/software tools, and new are being developed) that can perform some of the tasks which we will practice during this exercise, and often they can do much more. For your own project you may want to try to use some other tools, but there is no single "perfect" tool that fits all possible analyses and that is easy and usable for all disciplines and types of research questions. Also note that the main purpose of this exercise is to familiarize you with the basic principles/issues of bibliometric analyses. You can always learn more in your own time if you are interested.       
+Today, we will try to run bibliometric analyses on the relevant sample of literature. Note that there are a few available  R packages (and many other online/software tools, and new are being developed) that can perform some of the tasks which we will practice during this exercise, and often they can do much more. For your own project you may want to try to use some other tools, but there is no single "perfect" tool that fits all possible analyses and that is easy and usable for all disciplines and types of research questions. Also note that the main purpose of this exercise is to familiarize you with the basic principles/issues of bibliometric analyses. You can always learn more in your own time if you are interested.       
 
 
 ****
 
 *The search*
 
-First, we need to find a representative sample of academic publications on our topic of choice. For this, we will use cross-disciplianary database of academic literature, Scopus. This database has the largest coverage of the published literature and should give us the most complete picture. An alternative database, commonly used for broad academic literature searches and analyses, is Web of Science: https://www.webofknowledge.com/ (WoS; it has slightly different way of formatting serach strings).   
+First, we need to find a representative sample of academic publications on our topic of choice. For this, we will use cross-disciplinary database of academic literature, Scopus. This database has the largest coverage of the published literature and should give us the most complete picture. An alternative database, commonly used for broad academic literature searches and analyses, is Web of Science: https://www.webofknowledge.com/ (WoS; it has slightly different way of formatting search strings).   
 
-You should have free access to Scopus and Wos database on campus, but you may not be able to access it from outside the campus unless you use UNSW VPN or other university proxy servers (try loging in via the Library). Free-access broad-coverage databases include BASe (Bielfield Academic Search Engine, https://www.base-search.net/)  and Lens (lens.org). Google Scholar is not good, mainly because it is hard to export bibliometric records from the results list.    
+You should have free access to Scopus and WoS database on campus, but you may not be able to access it from outside the campus unless you use UNSW VPN or other university proxy servers (try loging in via the Library). Free-access broad-coverage databases include BASE (Bielfield Academic Search Engine, https://www.base-search.net/)  and Lens (https://www.lens.org). Google Scholar (https://scholar.google.com/) is not recommended for this type of work, mainly because it is hard to export bibliometric records from the results list.    
 
 
 ****   
 
 ### TASK 1    
-Go to Scopus search page: https://www.scopus.com/search/form.uri?display=basic and enter terminal investment in the basic search window, as follows:   
+Go to Scopus search page: https://www.scopus.com/search/form.uri?display=basic and enter the phrase "terminal investment" (without quotation marks) in the basic search window, as follows:   
 
 ```{r Scopus_TI_res_simple_search, echo=FALSE, fig.cap=" ", out.width='80%'}
 knitr::include_graphics("images/Scopus_TI_res_simple_search.png")
@@ -82,7 +86,7 @@ knitr::include_graphics("images/Scopus_TI_res_simple_search.png")
 ****   
 
 Press "Search"" button.    
-You shoud see results like this:   
+You should see results like this (note theat your numbers will be a bit higher due to accumulation of new literature since this tutorial was written):   
 
 
 ****   
@@ -94,13 +98,15 @@ knitr::include_graphics("images/Scopus_TI_res_simple_search_res.png")
 
 ****   
 
-Hey, this does not look good... - many documents were found, and mostof them are completely unrelated (e.g. on building shipping terminals).   
+Hey, this does not look good... - many documents were found, and most of them are completely unrelated (e.g. on building shipping terminals).   
 Why is that?    
 
 
 ****   
 
-This is because our search is too simple. It allows us only to find the papers that explicitly mention terminal AND investment words in their title, abstract or keywords. To find a more relevant set of bibliometric records for our analyses, we need a more sophisticated search string. Additionally, we will narrow down our topic a little bit more and aim to find papers that use immune challenge approach in wild or semi-wild animal species (so, we try to exclude established lab model species such as mice and rats, domesticated animals such as dogs and pigs, and humans). Finding the best search string is a bit of an art, so we just provide you with this one to save time:   
+This is because our search is too simple. It allows us only to find the papers that explicitly mention terminal AND investment words in their title, abstract or keywords (the AND operator is a default one and it gets inserted automatically by the search software). To find a more relevant set of bibliometric records for our analyses, we need a more sophisticated search string.   
+
+Additionally, we will narrow down our topic a little bit more and aim to find papers that use immune challenge approach in wild or semi-wild animal species (so, we try to exclude established lab model species such as mice and rats, domesticated animals such as dogs and pigs, and humans). Finding the best search string is a bit of an art, so we just provide you with this one to save time:   
 
 ```
 TITLE-ABS-KEY ( ( "terminal investment"  OR  "reproductive effort"  OR  "fecundity compensation"  OR  "reproductive compensation"  OR  "reproductive fitness"  OR  "reproductive investment"  OR  "reproductive success"  OR  "Life History Trade-Off*"  OR  "Phenotypic Plasticity" )  AND  ( "immune challeng*"  OR  "immunochalleng*"  OR  "infect*"  OR  lipopolysaccharide  OR  lps  OR  phytohemagglutinin  OR  pha  OR  "sheep red blood cells"  OR  srbc  OR  implant  OR  vaccin* ) )  AND NOT  TITLE-ABS-KEY ( load  OR  human  OR  people  OR  men  OR  women  OR  infant*  OR  rat  OR  rats  OR  mouse  OR  mice  OR  pig*  OR  pork  OR  beef  OR  cattle  OR  sheep  OR  lamb*  OR  chicken*  OR  calf*  OR  *horse* )  
@@ -110,7 +116,7 @@ TITLE-ABS-KEY ( ( "terminal investment"  OR  "reproductive effort"  OR  "fecundi
 ****   
 
 ### TASK 2    
-You need to copy and paste the above search string into the Avanced Search tab of the Scopus Search page:
+You need to copy and paste the above search string into the Advanced Search tab of the Scopus Search page:
 
 ```{r Scopus_TI_res_all_adv_search.png, echo=FALSE, fig.cap=" ", out.width='80%'}
 knitr::include_graphics("images/Scopus_TI_res_all_adv_search.png")
@@ -118,7 +124,7 @@ knitr::include_graphics("images/Scopus_TI_res_all_adv_search.png")
 
 ****   
 
-Press "Search"" button. You shoud see results like this:   
+Press "Search"" button. You should see results like this:   
 
 
 ****   
@@ -130,7 +136,7 @@ knitr::include_graphics("images/Scopus_TI_res_all.png")
 
 ****   
 
-There are still over 1,300 records retrieved from the Scopus database. Ssome look relevant and many are not, but that is always the case, for a systematic review or a meta-analysis we would manually screen all an exclude all irrelevant papers).    
+There are still over 1,300 records retrieved from the Scopus database. Some look relevant and many are not, but that is always the case, for a systematic review or a meta-analysis we would manually screen all an exclude all irrelevant papers).    
 
 On the left side of the results window you can see simple filters: year, most common author names, subject areas, etc. You can explore the whole set roughly by using "Analyze search results" link above the table of the hits:   
 
@@ -145,14 +151,15 @@ There are more graphs below, and you can expand and customise them a bit too - h
 
 ### TASK 3    
 
-Next, we can export the bibliometric records for more detailed bibliometric analyses in R. To do so, close the Scopus analyses window and go back to the list of records found. First, select all records by clicking box "All" in the left top of the list of references. Then click the "Export" link to the right.    
+Next, we can export the bibliometric records for more detailed bibliometric analyses in R. To do so, close the Scopus analyses window and go back to the list of the records found. First, select all records by clicking box "All" in the left top of the list of references. Then click the "Export" link to the right.    
 
 A pop-up window with the export options will appear.   
+
 First, select the format of the export: we will uses .bib file (BibTex format of references, one of the standard ones).   
 Second, select which fields have to be exported by clicking the boxes on top of each column (or as needed).   
 For bibliometric analyses on the citations among papers, it is essential to tick the box next to "Include references" (i.e. data on the cited documents).   
 
-Note that, unfortunately, Scopus limits number of exported records to 2000. For longer listes of records, you will need to split them in smaller chunks for the export and then merge into a single larger dataset (not covered in this tutorial; WoS export limits are 500 records).    
+Note that, unfortunately, Scopus limits number of exported records to 2,000. For longer lists of records, you will need to split them in smaller chunks for the export and then merge into a single larger data set (not covered in this tutorial; WoS export limits are 1,000 records).    
 
 ```{r Scopus_TI_res_all_export_bib, echo=FALSE, fig.cap=" ", out.width='80%'}
 knitr::include_graphics("images/Scopus_TI_res_all_export_bib.png")
@@ -164,7 +171,7 @@ knitr::include_graphics("images/Scopus_TI_res_all_export_bib.png")
 Click "Export" button. A file named "Scopus" (with extension matching your export type file, e.g., bib) will be saved to your downloads folder.    
 Note that when you export references with their reference lists included in the records, the resulting files are quite large (in our case around 16Mb).   
 
-In case you did not succeed exporting the files (or wish to work with exactly the same ones we used, or you cannot acces Scopus), the files downloaded on 27/05/2019 are provided (the standard way is to store them in a "/data" subdirectory).   
+In case you did not succeed exporting the files (or wish to work with exactly the same ones we used, or you cannot access Scopus), the files downloaded on 27/05/2019 are provided (note tha a standard way is to store them inside a "/data" sub-directory).   
 
 
 ****   
@@ -190,7 +197,7 @@ names(bib)
 #write.csv(bib, "data/bib_as_df.csv", row.names = FALSE) #if you want to save this data frame as a csv file
 ```
 
-After some processing, an object called "bib" is created. It contains a data frame with each row corresponsing to one exported publication from Scopus and with each column corresponding to a field exported from Scopus online database. If you tried to achieve this by exporting a csv file directly from Scopus, you would sonetimes get a meessy data frame, due to missing field values shifting the cells between columns. 
+After some processing, an object called "bib" is created. It contains a data frame with each row corresponding to one exported publication from Scopus and with each column corresponding to a field exported from Scopus online database. If you tried to achieve this by exporting a csv file directly from Scopus, you would sometimes get a messy data frame, due to missing field values shifting the cells between columns. 
 
 
 ****   
@@ -200,10 +207,10 @@ What are the contents of the columns of our "bib" data frame?  Columns are label
 For a complete list and descriptions of field tags used in *bibliometrix* you can have a look at this file:   http://www.bibliometrix.org/documents/Field_Tags_bibliometrix.pdf   
 Our data frame contains just a subset of these codes. Which ones?   
  
-Note that column **bib$AU** contains authors of each paper (as surenames and initials) separated by semicolon (;). We can easily split these strings and extract a list of all author names to a vector:    
+Note that column **bib$AU** contains authors of each paper (as surnames and initials) separated by semicolon (;). We can easily split these strings and extract a list of all author names to a vector:    
 
 ```{r get author names, eval=TRUE}
-# head(bib$AU) #have a look at the few few records on your sceen
+# head(bib$AU) #have a look at the few few records on your screen
 authors <- bib$AU
 authors <- unlist(strsplit(authors, ";")) #split the records into individual authors
 authors <- authors[order(authors)] #order alphabetically
@@ -216,13 +223,13 @@ head(authors) #have a look again
 ****   
 
 ### TASK 6    
-Cited references for each included paper are in the CR column of the "bib" data frame. They are in a single string, also seperated by semicolon (;). We can have a look at them and check whether familiar names were cited, e.g.:   
+Cited references for each included paper are in the CR column of the "bib" data frame. They are in a single string, also separated by semicolon (;). We can have a look at them and check whether familiar names were cited, e.g.:   
 
 ```{r  citations, eval=TRUE}
 dim(bib) #dimensions of the data frame
 names(bib) #names of the columns of the data frame
 #bib$CR[1] #display a list of cited references for the first paper in the data frame 
-#(we are not displaying it in this doucment as it is a very long string! - examine it on your screen instead)
+#(we are not displaying it in this document as it is a very long string! - examine it on your screen instead)
 #look whether some of these names are cited:
 grep("NAKAGAWA, S.", bib$CR) 
 grep("CORNWELL, W.", bib$CR) 
@@ -239,20 +246,20 @@ bib[grep("CORNWELL, W.", bib$CR), c(1:3)] #who is citing?
 Luckily, *bibliometrix* package  has a handy function that summarises the information contained in the "bib" data frame, so we can get some quick facts about our set of papers.   
 
 **Note:** this and the following tasks require quite a bit of computational power, they may be slow or even halt on your computer.    
-In such case, for this exercise, make your data frame smaller by subsetting it, e.g.:   
-"bib <- bib[1:500, ] #taking first 500 records". However, the results and plots you will produce with a subsetted data frame will differ from the ones presented in this document.     
+In such case, for this exercise, make your data frame smaller by sub-setting it, e.g.:   
+"bib <- bib[1:500, ] #taking first 500 records". However, the results and plots you will produce with a sub-setted data frame will differ from the ones presented in this document.     
 
 ```{r  descriptive tables, eval=TRUE}
 # Preliminary descriptive analyses 
 results <- biblioAnalysis(bib, sep = ";")
 #summary(object = results, k = 10, pause = TRUE) #display a series of summary tables
 
-# Reduce the dataset to the subset first 500 records
+# Reduce the data set to the subset first 500 records
 bib <- bib[1:500, ] #taking first 500 records
 #summary(object = results, k = 10, pause = TRUE) #display a series of summary tables
 ```
 
-Using *summary* function on *bibliometrix* results, you  get several screens with various tables summarising bibliometric data from our data frame - how many documents, journals, keywords, authors, publicatons timespan, collaboration index, annual publication growth rate, most prolific authors, publications per country, per journal, per keywords, etc.    
+Using *summary* function on *bibliometrix* results, you  get several screens with various tables summarising bibliometric data from our data frame - how many documents, journals, keywords, authors, publications time-span, collaboration index, annual publication growth rate, most prolific authors, publications per country, per journal, per keywords, etc.    
 
 You can automatically plot some of these tables (hit "return"" to display next graph, and later you can use arrows in the top left of the plots pane to move back and forth between consecutive plots saved in the RStudio memory):  
 
@@ -346,7 +353,7 @@ What happens and why?
 
 ```{r  paper co-citation network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib[1:50,], analysis = "co-citation", network = "references", sep = ";")
-net = networkPlot(NetMatrix, weighted=NULL, n = 10, Title = "Papers' co-citations", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
+net <- networkPlot(NetMatrix, weighted=NULL, n = 10, Title = "Papers' co-citations", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
 ```
 
 Note that for creating this matrix we only used first 50 papers from our data set - this is because the resulting matrix is a matrix of ALL cited papers and it gets HUGE). Also, we plotted only the top 10 most coupled papers (n=10). Try increasing this number to 20 (would not recommend further increasing the number of displayed nodes to >50 - it gets slow and messy).   
@@ -360,7 +367,7 @@ What happens and why?
 
 ```{r  author collaboration network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib, analysis = "collaboration", network = "authors", sep = ";")
-net = networkPlot(NetMatrix, weighted = NULL, n = 10, Title = "Authors' collaborations", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
+net <- networkPlot(NetMatrix, weighted = NULL, n = 10, Title = "Authors' collaborations", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
 ```
 
 Above, we plotted only the top 10 most collaborating authors (n=10). Try increasing this number to 100 (would not recommend further increasing the number of displayed nodes - it gets slow and messy).   
@@ -375,10 +382,10 @@ What happens and why?
 ```{r  country collaboration network, eval=TRUE}
 bib <- metaTagExtraction(bib, Field = "AU_CO", sep = ";") #we need to extract countries from the affiliations first
 NetMatrix <- biblioNetwork(bib, analysis = "collaboration", network = "countries", sep = ";")
-net = networkPlot(NetMatrix, n = 10, Title = "Country Collaboration", type = "auto", size = TRUE, remove.multiple = FALSE, labelsize = 0.5)
+net <- networkPlot(NetMatrix, n = 10, Title = "Country Collaboration", type = "auto", size = TRUE, remove.multiple = FALSE, labelsize = 0.5)
 ```
 
-Above, we plotted only the top 10 most collaborating countrie (n=10). Try increasing this number to 50 (would not recommend further increasing the number of displayed nodes to >100 - it gets slow and messy).   
+Above, we plotted only the top 10 most collaborating countries (n=10). Try increasing this number to 50 (would not recommend further increasing the number of displayed nodes to >100 - it gets slow and messy).   
 What happens and why? 
 
 
@@ -389,7 +396,7 @@ What happens and why?
 
 ```{r  keyword co-occurance network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib, analysis = "co-occurrences", network = "keywords", sep = ";")
-net = networkPlot(NetMatrix, n = 50, Title = "Keyword co-occurance", type = "fruchterman", size = T, remove.multiple = FALSE, labelsize = 0.7, edgesize = 5)
+net <- networkPlot(NetMatrix, n = 50, Title = "Keyword co-occurance", type = "fruchterman", size = T, remove.multiple = FALSE, labelsize = 0.7, edgesize = 5)
 ```
 
 Try replacing network = "keywords" with network = "author_keywords" and see what happens. You can also try to display fewer/more keywords in the plot.   
@@ -420,11 +427,12 @@ Is the new map different?
 ```{r  histNetwork, eval=TRUE, message=FALSE}
 #options(width = 130)
 histResults <- histNetwork(bib, min.citations = 10, sep = ";")
-net = histPlot(histResults, labelsize = 2)
+net <- histPlot(histResults, labelsize = 2)
 ```
 
 Only articles with minimum of 10 citations are included in the above analysis, if you change this number to a higher value, the analyses will be quicker and the plot less dense. Have a try!      
 
+****
 
 **MORE TO DO**    
 You can use different types of network plots - just tweak "type" parameter in the *networkPlot* function (check the vignette for the available options). "Type" parameter indicates the network map plotting layout: circle, kamada-kawai, mds, etc.     
@@ -437,7 +445,7 @@ You can use non-R tools to visualise bibliographic networks, e.g. VOSviewer soft
 ## Resources   
 
 * Bibliometrix webpage: http://www.bibliometrix.org/  and documentation:  http://www.bibliometrix.org/documents.html        
-* A more detailed *bibliometrox* package tutorial: https://cran.r-project.org/web/packages/bibliometrix/vignettes/bibliometrix-vignette.html    
+* A more detailed *bibliometrix* package tutorial: https://cran.r-project.org/web/packages/bibliometrix/vignettes/bibliometrix-vignette.html    
 * Another useful R package - Revtools:  http://revtools.net/   
 * Stand-alone GUI software - VOSviewer: http://www.vosviewer.com/    
 
@@ -472,7 +480,7 @@ par(mfrow=c(1,1), mar=c(0,0,0,0))
 M <- metaTagExtraction(bib, Field = "CR_AU", sep = ";")
 NetMatrix <- biblioNetwork(M, analysis = "collaboration", network = "authors", sep = ";")
 net <- networkPlot(NetMatrix, n = 100, cluster="walktrap", Title = "", labelsize = 1, type = "fruchterman", size=TRUE, remove.multiple=TRUE)	
-dev.off() #note, changing n alters the colurs and arrangements of the authors and clusters
+dev.off() #note, changing n alters the colours and arrangements of the authors and clusters
 
 #####################  Figure - HISTORICAL CO-CITATION NETWORK  ####################################################
 pdf(file="Figure_historical_network.pdf", width=8, height=8, pointsize=10)
